# rl_pnp

./: .gitignore  README.md  docker_pull.sh  docker_run.sh  download_model.sh  generate_affordance.ipynb  test_scanner.cpp  test_thres_moved.sh  test_thres_no_moved.sh
dataset/: README.md
deprecated/manipulation/: CMakeLists.txt  package.xml  suck_object.cpp
deprecated/visual_system/: check_num.py
deprecated/visual_system/src/: barcode_detection_server.py
dlp_final/arm_operation/: CMakeLists.txt  package.xml
dlp_final/arm_operation/config/: tcp_config.yaml
dlp_final/grasp_suck/: CMakeLists.txt  README.md
dlp_final/grasp_suck/include/: helper_services.h
dlp_final/grasp_suck/launch/: helper_services.launch  ict_demo.launch
dlp_final/grasp_suck/src/: robotiq_gripper_control.cpp  utils.py
dlp_final/grasp_suck/srv/: get_pose.srv
dlp_final/robot_description/: CMakeLists.txt  package.xml
dlp_final/vacuum_conveyor_control/: CMakeLists.txt  package.xml
dlp_final/vacuum_conveyor_control/src/: vacuum_and_conveyor_control.cpp
dlp_final/vacuum_conveyor_control/srv/: vacuum_control.srv
dlp_final/visual_system/: CMakeLists.txt  package.xml
dockerfile/: Dockerfile-cuda10  Dockerfile-cuda9
random/: exp1_known.py  exp2_hybrid.py  exp2_novel.py  split_dataset.py  split_result.txt  test_set.csv  train_set.csv
some_data/: camera_serial_no.txt  dis_cam2plane.txt
src/arm_operation/: CMakeLists.txt  README.md  package.xml
src/grasp_suck/: CMakeLists.txt  README.md  package.xml
src/grasp_suck/ict_demo/: README.md  ict_demo_test.sh  ict_demo_train.sh
src/grasp_suck/include/: helper_services.h
src/grasp_suck/launch/: actuator.launch  autonomous_recording.launch  grasp_suck_system.launch  helper_services.launch  ict_demo.launch  sensors.launch
src/grasp_suck/src/: SumTree.py  augment_buffer.py  autonomous_recording.cpp  bag_to_data.cpp  exp_1.py  exp_2.py  generate_hdf5.py  get_img.py  get_pose_service.cpp  get_reward.cpp  get_weight.py  get_weight_diff.py  helper_services.cpp  ict_demo.py  main.py  manual_label.py  model.py  model_v2.py  models.py  offline.py  offline_training.py  plot_data.py  prioritized_memory.py  robotiq_gripper_control.cpp  rotate_img.py  test.py  test_network.py  trainer.py  utils.py
src/grasp_suck/src/baseline/: actionWrapper.py  arc_2017.py  bin_pose.txt  bin_range.txt  camera_pose.txt  train_gripper_net.py  train_suck_net.py  utils.py
src/grasp_suck/src/old/: models.py  offline_training.py  trainer.py
src/grasp_suck/src/only_suction/: main.py  model.py  test.txt  trainer.py  utils.py
src/grasp_suck/src/test_code/: get_img.py  test.bash  test_empty.py  test_network.py  test_surface_feature.py  test_valid.py
src/grasp_suck/srv/: get_pose.srv  get_result.srv  recorder.srv
src/hand_eye_calibration/: CMakeLists.txt  calibration.sh  package.xml
src/hand_eye_calibration/config/: param.yaml
src/hand_eye_calibration/data/: README.md  calibration.txt  cam1_calibration.txt  cam1_transform.txt  cam2_calibration.txt  camera1_data.txt  camera2_data.txt  result.txt
src/hand_eye_calibration/include/: mainwindow.h  mainwindow_calibration.h  point_set_registration.h
src/hand_eye_calibration/launch/: calibrate_cameras.launch  fake_tcp_publisher.launch  hand_eye_calibration_abb.launch  validate_calibration.launch
src/hand_eye_calibration/src/: README.md  calibration.cpp  cam_on_hand_calibration.cpp  cam_on_hand_navy.cpp  cameras_calibration.cpp  eyes_calibration.cpp  get_transform.cpp  point_set_registration.cpp  set_urdf.cpp  static_cam_by_on_hand.cpp  static_cam_calibration.cpp  test_calibration.py  test_calibration_abb.py  validate_charuco_data.cpp
src/hand_eye_calibration/src/abb_calibration_qt/: main.cpp  mainwindow.cpp  mainwindow_calibration.ui
src/hand_eye_calibration/src/qt/: mainwindow.cpp  mainwindow.ui
src/irb1660id_urdf/: CMakeLists.txt  urdf.rviz
src/open_abb/: README.md
src/open_abb/abb_node/: CMakeLists.txt  package.xml
src/open_abb/abb_node/launch/: abb_logger.launch  abb_tf.launch  robot_params.yaml
src/open_abb/abb_node/msg/: joints.msg
src/open_abb/abb_node/src/: abb_logger.cpp  abb_node.cpp  abb_node.h
src/open_abb/abb_node/srv/: robot_GetCartesian.srv  robot_GetJoints.srv  robot_SetCartesian.srv  robot_SetJoints.srv
src/vacuum_conveyor_control/: CMakeLists.txt
src/vacuum_conveyor_control/arduino_code/vacuum_conveyor/: vacuum_conveyor.ino
src/vacuum_conveyor_control/arduino_code/vacuum_pump/vacuum_pump/: vacuum_pump.ino
src/vacuum_conveyor_control/config/: vacuum_data.yaml
src/vacuum_conveyor_control/launch/: vacuum_pump.launch
src/vacuum_conveyor_control/src/: vacuum_and_conveyor_control.cpp  vacuum_pump_control.cpp
src/visual_system/: CMakeLists.txt  package.xml
src/visual_system/config/: param_config.yaml  static_tf_info.yaml
src/visual_system/include/: charuco_detector.h  helper.h
src/visual_system/include/visual_system/: charuco_detector.h  mainwindow.h
src/visual_system/launch/: combine_pc.launch  dual_cameras_charuco_detection.launch  save_image_server.launch  static_cams_tf.launch
src/visual_system/src/: barcode_detection_server.py  charuco.cpp  charuco_detector.cpp  check_num.py  conversion.hpp  decode_vector.cpp  get_click_position.cpp  get_conveyor_plane.cpp  get_target_pc.cpp  helper.cpp  pc_transform.cpp  pc_transform_two_cams.cpp  pixel_to_xyz.cpp  pointcloud_to_image.cpp  take_picture.cpp  two_cams_tf.cpp
src/visual_system/src/data/: __init__.py  config.py  strawberry.py
src/visual_system/src/random_grasping/: main.cpp  mainwindow.cpp  mainwindow.ui
src/visual_system/srv/: barcode_detect.srv  check_grasp_success.srv  get_image.srv  get_pc.srv  get_surface_feature.srv  get_xyz.srv  pc_is_empty.srv  target_pose.srv
src/visualization/: CMakeLists.txt  package.xml
src/visualization/config/: grasp_suck_system.rviz  system.rviz  viz.rviz
src/visualization/launch/: viz.launch
src/visualization/src/: bag_to_data.cpp  bag_to_video.cpp  draw_path.cpp  show_lines.py  viz_boundary.py  viz_clicked.py  viz_marker.py
src/visualization/srv/: viz_marker.srv
(+98 files in other folders)
