<?xml version="1.0"?>
<package format="2">
  <name>vacuum_conveyor_control</name>
  <version>0.0.0</version>
  <description>
    vacuum and conveypr control
  </description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>TODO</license>

  <author email="sean19960914@gmail.com">Sean</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>boost</test_depend>

</package>
