<?xml version="1.0"?>
<package format="2">
  <name>grasp_suck</name>
  <version>0.0.0</version>
  <description>DLP 2019 Summer, final project</description>
  <maintainer email="sean19960914@gmail.com">sean</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>message_runtime</exec_depend> 
  
</package>
